--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Jenkins-springboot-db-app
-
+server.port=9090
 
 #Database URL
 spring.datasource.url=jdbc:mysql://localhost:3306/ajeetblog?createDatabaseIfNotExist=true
